# ultreon-game-launcher

./: README.md  icon-square.xcf  icon.xcf  index.html  next.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  publish.yml
.run/: Tauri Build.run.xml  Tauri Dev.run.xml
release/app/: package.json
src/: App.css  App.tsx  CustomToast.tsx  Games.tsx  Profiles.tsx  Sdk.tsx  custom-toast.css
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  game.rs  launch.rs  main.rs  net.rs  profiles.rs  sdk.rs  util.rs
src/app/: App.css  page.tsx
src/main/: main.ts  menu.ts  preload.ts
src/renderer/: App.css  App.tsx  preload.d.ts
