[package]
name = "game-launcher"
version = "0.1.0"
description = "A launcher for games by Ultreon"
authors = ["Ultreon", "XyperCode"]
license = ""
repository = "https://github.com/Ultreon/ultreon-game-launcher"
default-run = "game-launcher"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "dialog" ] }
msgbox = "0.7.0"
zip = "0.6.6"
flate2 = "1.0"
tar = "0.4"
anyhow = "1.0.75"
thiserror = "1.0.50"
reqwest = { version = "0.11.22", features = [ "blocking", "stream" ] }
indicatif = "0.17.7"
tokio = { version = "1.13.0", features = ["full"] }
tokio-stream = "0.1.14"
futures-util = "0.3.29"
semver = "1.0.20"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
